feat: Domain에서 View를 위해 데이터를 가공하는 것이 아닌 Controller가 하도록 수정